# AudioPiStreamming

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
TestingScript/: .clienttest.sh.swp  .servertest.sh.swp  client.sh  clienttest.sh  server.sh
basePi/: base-audio-processing.cpp  base-communication.cpp  base-controler.cpp  base-controler.hpp  base-main.cpp
client/: client-audio-controller.cpp  client-audio-controller.hpp  client-audio-local-mp3.cpp  client-audio-local-mp3.hpp  client-audio-local.cpp  client-audio-local.hpp  client-audio-processing.cpp  client-audio-processing.hpp  client-audio-udp-file.cpp  client-audio-udp-file.hpp  client-audio-udp-live.cpp  client-audio-udp-live.hpp  client-audio-udp.cpp  client-audio-udp.hpp  client-audio.cpp  client-audio.hpp  client-communication-controller-with-headquarters.cpp  client-communication-controller-with-headquarters.hpp  client-communication-with-headquarters.cpp  client-communication-with-headquarters.h  client-controller-audio-live-udp.cpp  client-controller-audio-live-udp.hpp  client-controller-audio-local.cpp  client-controller-audio-local.hpp  client-controller-audio-udp.cpp  client-controller-audio-udp.hpp  client-controller-audio.cpp  client-controller-audio.hpp  client-main-audio-controller.cpp  client-main-audio-controller.hpp  client-main.cpp  client-qt-controller.cpp  client-qt-controller.hpp
client-tests/: test-communication-state.cpp
device/: device-communication.cpp  device-communication.h  device-controler.cpp  device-controler.hpp  device-local.cpp  device-local.hpp  device-main.cpp  device-udp.cpp  device-udp.hpp
headquarters/: headquarters-audio-processing.cpp  headquarters-audio-processing.hpp  headquarters-communication-controller.cpp  headquarters-communication-controller.hpp  headquarters-communication.cpp  headquarters-communication.h  headquarters-controler.cpp  headquarters-controler.hpp  headquarters-main.cpp
media/: communication-state.cpp  communication-state.hpp  media.cpp  media.hpp  messageBus.cpp  messageBus.hpp
qt/: main.qml
server/: server-audio-processing.cpp  server-controler.cpp  server-controler.hpp  server-controler.hpp.autosave  server-local.cpp  server-local.hpp  server-main.cpp  server-rtsp.cpp  server-rtsp.hpp  server-udp.cpp  server-udp.hpp
